# NumericMethods1

./: .gitignore  CMakeLists.txt  Generator.hpp  Resolver.cpp  Resolver.h  Utils.cpp  Utils.h  conanfile.txt  main.cpp
